--- a/app/src/main/res/layout/activity_image_upload.xml
+++ b/app/src/main/res/layout/activity_image_upload.xml
@@ -4,16 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#e9ebed">
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="56dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:background="@color/white"
         android:clipToPadding="false"
         app:layout_collapseMode="pin"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        android:background="@color/white"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
 
         <RelativeLayout
@@ -27,21 +28,21 @@
                 android:id="@+id/backPreviousActivityImage"
                 android:layout_width="@dimen/small_image_size"
                 android:layout_height="@dimen/small_image_size"
-                android:onClick="backBtnAction"
-                android:src="@drawable/red_back_arrow"
-                android:layout_gravity="center"
+                android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                android:layout_alignParentLeft="true"/>
+                android:layout_gravity="center"
+                android:onClick="backBtnAction"
+                android:src="@drawable/red_back_arrow" />
 
             <TextView
                 android:id="@+id/own_info"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:lines="2"
-                android:text="@string/apnar_baktigoto_tottho"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:gravity="center"
+                android:lines="2"
+                android:text="আপনার ছবি আপলোড করুন"
                 android:textColor="@color/colorPrimary"
                 android:textSize="@dimen/medium_textsize"
                 android:textStyle="bold" />
@@ -52,10 +53,10 @@
                 android:layout_width="@dimen/small_image_size"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
+                android:layout_gravity="center"
                 android:layout_marginRight="@dimen/small_margin"
                 android:src="@drawable/grey_fav"
-                android:layout_gravity="center"
-                android:visibility="invisible"/>
+                android:visibility="invisible" />
 
 
         </RelativeLayout>
@@ -63,27 +64,262 @@
     </android.support.v7.widget.Toolbar>
 
     <ScrollView
+        android:id="@+id/Scroll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/Scroll"
         android:layout_below="@id/toolbar">
-
-
-
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_below="@id/toolbar">
+            android:layout_below="@id/toolbar"
+            android:orientation="vertical">
+
+            <FrameLayout
+                android:id="@+id/profile_picture"
+                android:layout_width="148dp"
+                android:layout_height="148dp"
+                android:layout_margin="10dp"
+                android:background="@color/white">
+
+                <LinearLayout
+                    android:id="@+id/before_pro_pic_upload"
+                    android:layout_width="148dp"
+                    android:layout_height="148dp"
+                    android:orientation="vertical"
+                    android:weightSum="1">
+                    <TextView
+                        android:textAlignment="center"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="প্রোফাইল ছবি" />
+
+                    <ImageView
+                        android:layout_marginTop="35dp"
+                        android:layout_marginLeft="50dp"
+                        android:id="@+id/imageView4"
+                        android:layout_width="58dp"
+                        android:layout_height="43dp"
+                        android:src="@drawable/camera_icon1" />
+                </LinearLayout>
+
+                <FrameLayout
+                    android:id="@+id/after_pro_pic_upload"
+                    android:layout_width="148dp"
+                    android:layout_height="148dp">
+                    <ImageView
+                        android:id="@+id/pro_pic"
+                        android:layout_width="148dp"
+                        android:layout_height="148dp" />
+
+                    <LinearLayout
+                        android:id="@+id/pro_pic_image_change"
+                        android:background="#33000000"
+                        android:layout_width="148dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="bottom"
+                        android:weightSum="1">
+                        <ImageView
+                            android:src="@drawable/camera_icon_2"
+                            android:layout_width="30dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="0.44" />
+
+                        <TextView
+                            android:textColor="@color/white"
+                            android:layout_marginLeft="5dp"
+                            android:id="@+id/textView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="ছবি আপডেট করুন" />
+                    </LinearLayout>
+
+                </FrameLayout>
+
+
+
+
+            </FrameLayout>
+
             <RelativeLayout
+                android:id="@+id/other_images"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="148dp"
+                android:layout_margin="10dp"
+                >
+
+                <FrameLayout
+                    android:layout_width="148dp"
+                    android:layout_height="148dp"
+                    android:background="@color/white"
+                    android:layout_alignParentLeft="true">
+
+                    <LinearLayout
+                        android:id="@+id/before_body_pic_upload"
+                        android:layout_width="148dp"
+                        android:layout_height="148dp"
+                        android:orientation="vertical"
+                        android:weightSum="1">
+                        <TextView
+                            android:textAlignment="center"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="ছবি (আপাদমস্তক)" />
+
+                        <ImageView
+                            android:layout_marginTop="35dp"
+                            android:layout_marginLeft="50dp"
+                            android:layout_width="58dp"
+                            android:layout_height="43dp"
+                            android:src="@drawable/camera_icon1" />
 
 
+                    </LinearLayout>
+
+                    <FrameLayout
+                        android:id="@+id/after_body_pic_upload"
+                        android:layout_width="148dp"
+                        android:layout_height="148dp">
+                        <ImageView
+                            android:id="@+id/body_pic"
+                            android:layout_width="148dp"
+                            android:layout_height="148dp" />
+
+                        <LinearLayout
+                            android:id="@+id/body_pic_image_change"
+                            android:background="#33000000"
+                            android:layout_width="148dp"
+                            android:layout_height="40dp"
+                            android:layout_gravity="bottom"
+                            android:weightSum="1">
+                            <ImageView
+                                android:src="@drawable/camera_icon_2"
+                                android:layout_width="30dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.44" />
+
+                            <TextView
+                                android:textColor="@color/white"
+                                android:layout_marginLeft="5dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:text="ছবি আপডেট করুন" />
+                        </LinearLayout>
+
+                    </FrameLayout>
+                   
+
+                    
+                </FrameLayout>
+
+
+                <FrameLayout
+                    android:layout_width="148dp"
+                    android:layout_height="148dp"
+                    android:background="@color/white"
+                    android:layout_alignParentRight="true">
+
+                    <LinearLayout
+                        android:id="@+id/before_other_pic_upload"
+                        android:layout_width="148dp"
+                        android:layout_height="148dp"
+                        android:orientation="vertical"
+                        android:weightSum="1">
+                        <TextView
+                            android:textAlignment="center"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="ছবি" />
+
+                        <ImageView
+                            android:layout_marginTop="35dp"
+                            android:layout_marginLeft="50dp"
+                            android:layout_width="58dp"
+                            android:layout_height="43dp"
+                            android:src="@drawable/camera_icon1" />
+
+
+                    </LinearLayout>
+
+                    <FrameLayout
+                        android:id="@+id/after_other_pic_upload"
+                        android:layout_width="148dp"
+                        android:layout_height="148dp">
+                        <ImageView
+                            android:id="@+id/other_pic"
+                            android:layout_width="148dp"
+                            android:layout_height="148dp" />
+
+                        <LinearLayout
+                            android:id="@+id/other_pic_image_change"
+                            android:background="#33000000"
+                            android:layout_width="148dp"
+                            android:layout_height="40dp"
+                            android:layout_gravity="bottom"
+                            android:weightSum="1">
+                            <ImageView
+                                android:src="@drawable/camera_icon_2"
+                                android:layout_width="30dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.44" />
+
+                            <TextView
+                                android:textColor="@color/white"
+                                android:layout_marginLeft="5dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:text="ছবি আপডেট করুন" />
+                        </LinearLayout>
+
+                    </FrameLayout>
+
+                </FrameLayout>
 
             </RelativeLayout>
+
+
+            <LinearLayout
+                android:id="@+id/permission"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_marginLeft="10dp"
+                    android:text="আপনার ছবি দেখার অনুমতি দিচ্ছেন?"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <RelativeLayout
+                    android:layout_margin="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <Button
+                        android:id="@+id/yes"
+                        android:text="হ্যাঁ"
+                        android:layout_width="148dp"
+                        android:layout_height="wrap_content"/>
+                    <Button
+                        android:id="@+id/no"
+                        android:text="না"
+                        android:layout_width="148dp"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"/>
+
+                </RelativeLayout>
+                <TextView
+                    android:textSize="10dp"
+                    android:text="ছবি দেখার অনুমতি দিলে পাত্র/পাত্রী হিসেবে আপনার নির্বাচিত হবার সম্ভাবনা বেড়ে যাবে।"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginLeft="10dp"/>
+
+
+            </LinearLayout>
 
 
 
@@ -92,6 +328,5 @@
 
 
     </ScrollView>
-
 
 </RelativeLayout>
