--- a/app/src/main/res/layout/activity_registration_first.xml
+++ b/app/src/main/res/layout/activity_registration_first.xml
@@ -88,6 +88,7 @@
                     android:layout_weight=".7"
                     android:singleLine="true"
                     android:imeOptions="actionNext"
+                    android:inputType="textEmailAddress"
                     />
                 <EditText
                     android:id="@+id/password"
@@ -100,7 +101,8 @@
                     android:paddingLeft="10sp"
                     android:layout_weight=".7"
                     android:singleLine="true"
-                    android:imeOptions="actionNext"/>
+                    android:imeOptions="actionNext"
+                    android:inputType="text"/>
                 <EditText
                     android:id="@+id/name"
                     android:layout_below="@id/password"
@@ -112,7 +114,8 @@
                     android:paddingLeft="10sp"
                     android:layout_weight=".7"
                     android:singleLine="true"
-                    android:imeOptions="actionNext"/>
+                    android:imeOptions="actionNext"
+                    android:inputType="text"/>
                 <EditText
                     android:id="@+id/display_name"
                     android:layout_below="@id/name"
@@ -124,7 +127,8 @@
                     android:paddingLeft="10sp"
                     android:layout_weight=".8"
                     android:imeOptions="actionDone"
-                    android:singleLine="true"/>
+                    android:singleLine="true"
+                    android:inputType="text"/>
 
                <!-- <net.rimoto.intlphoneinput.IntlPhoneInput
                     android:layout_width="wrap_content"
