--- a/app/src/main/res/layout/activity_registration_first.xml
+++ b/app/src/main/res/layout/activity_registration_first.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:isScrollContainer="false">
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:facebook="http://schemas.android.com/tools"
@@ -16,191 +17,197 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/accountrecharge_backGround_color"
-            android:weightSum="10"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:weightSum="10">
 
-                <ImageView
-                    android:id="@+id/imageview"
-                    android:layout_width="match_parent"
-                    android:layout_marginTop="20dp"
-                    android:layout_height="60dp"
-                    android:layout_weight="1.1"
-                    android:src="@drawable/biyeta_name_image"
-                    />
+            <ImageView
+                android:id="@+id/imageview"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginTop="20dp"
+                android:layout_weight="1.1"
+                android:src="@drawable/biyeta_name_image" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:layout_below="@id/imageview"
-                    android:text="খুঁজছি"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="20sp"
-                    android:id="@+id/find_text"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_weight=".7"/>
-                <LinearLayout
-                    android:layout_weight=".7"
-                    android:layout_below="@id/find_text"
-                    android:id="@+id/button"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:weightSum="2"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginBottom="10dp"
-                    >
+            <TextView
+                android:id="@+id/find_text"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_below="@id/imageview"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_weight=".7"
+                android:text="খুঁজছি"
+                android:textColor="@color/colorPrimary"
+                android:textSize="20sp" />
 
-                    <Button
-                        android:id="@+id/man"
-                        android:background="@color/tab_background_unselected"
-                        android:textColor="@color/back_varify_text_view_1"
-                        android:layout_width="match_parent"
-                        android:layout_height="35dp"
-                        android:layout_marginRight="15dp"
-                        android:layout_weight="1"
-                        android:layout_gravity="left"
-                        android:text="পাত্র"
-                        android:textSize="20sp"/>
-                    <Button
-                        android:id="@+id/woman"
-                        android:background="@color/tab_background_unselected"
-                        android:textColor="@color/back_varify_text_view_1"
-                        android:layout_width="match_parent"
-                        android:layout_height="35dp"
-                        android:layout_marginLeft="15dp"
-                        android:layout_weight="1"
-                        android:layout_gravity="right"
-                        android:text="পাত্রী"
-                        android:textSize="20sp"/>
-                </LinearLayout>
-                <EditText
-                    android:id="@+id/email"
-                    android:layout_below="@id/button"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:hint="ইমেইল"
-                    android:background="@color/white"
-                    android:layout_margin="10dp"
-                    android:paddingLeft="10sp"
-                    android:layout_weight=".7"
-                    android:singleLine="true"
-                    android:imeOptions="actionNext"
-                    android:inputType="textEmailAddress"
-                    />
-                <EditText
-                    android:id="@+id/password"
-                    android:layout_below="@id/email"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:hint="পাসওয়ার্ড (ন্যূনতম ৮ অক্ষর)"
-                    android:background="@color/white"
-                    android:layout_margin="10dp"
-                    android:paddingLeft="10sp"
-                    android:layout_weight=".7"
-                    android:singleLine="true"
-                    android:imeOptions="actionNext"
-                    android:inputType="text"/>
-                <EditText
-                    android:id="@+id/name"
-                    android:layout_below="@id/password"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:hint="নাম"
-                    android:background="@color/white"
-                    android:layout_margin="10dp"
-                    android:paddingLeft="10sp"
-                    android:layout_weight=".7"
-                    android:singleLine="true"
-                    android:imeOptions="actionNext"
-                    android:inputType="text"/>
-                <EditText
-                    android:id="@+id/display_name"
-                    android:layout_below="@id/name"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:hint="ডিসপ্লে নাম"
-                    android:background="@color/white"
-                    android:layout_margin="10dp"
-                    android:paddingLeft="10sp"
-                    android:layout_weight=".8"
-                    android:imeOptions="actionDone"
-                    android:singleLine="true"
-                    android:inputType="text"/>
-
-               <!-- <net.rimoto.intlphoneinput.IntlPhoneInput
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignLeft="@+id/numbervarifytextView1"
-                    android:layout_alignRight="@+id/numbervarifytextView1"
-                    android:background="@color/back_verifycode_edittext1"
-                    android:layout_marginTop="15dp"
-                    app:textSize="14sp"
-                    app:textColor="#000000"
-                    app:flagPaddingEnd="4dp"
-                    app:flagPaddingStart="4dp"
-                    app:flagPaddingTop="4dp"
-                    app:flagPaddingBottom="4dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:id="@+id/my_phone_input"
-                    android:padding="5dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_below="@id/numbervarifytextView1"/>-->
+            <LinearLayout
+                android:id="@+id/button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/find_text"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight=".7"
+                android:orientation="horizontal"
+                android:weightSum="2">
 
                 <Button
-                    android:id="@+id/register_button"
+                    android:id="@+id/man"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_below="@id/my_phone_input"
-                    android:layout_margin="10dp"
-                    android:background="@color/colorPrimary"
-                    android:text="রেজিস্ট্রেশন করুন"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
-                    android:layout_weight=".8"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp"
-                    android:id="@+id/or"
-                    android:layout_below="@id/register_button"
-                    android:text="অথবা"
-                    android:gravity="center"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_weight=".5"
-                    android:layout_marginLeft="10dp"/>
+                    android:layout_height="35dp"
+                    android:layout_gravity="left"
+                    android:layout_marginRight="15dp"
+                    android:layout_weight="1"
+                    android:background="@color/tab_background_unselected"
+                    android:text="পাত্র"
+                    android:textColor="@color/back_varify_text_view_1"
+                    android:textSize="20sp" />
 
                 <Button
+                    android:id="@+id/woman"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:id="@+id/login_button"
-                    android:text="ফেসবুক দিয়ে রেজিস্ট্রেশন করুন"
-                    android:paddingLeft="15dp"
-                    android:textColor="@color/white"
-                    android:layout_margin="10dp"/>
+                    android:layout_height="35dp"
+                    android:layout_gravity="right"
+                    android:layout_marginLeft="15dp"
+                    android:layout_weight="1"
+                    android:background="@color/tab_background_unselected"
+                    android:text="পাত্রী"
+                    android:textColor="@color/back_varify_text_view_1"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/email"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_below="@id/button"
+                android:layout_margin="10dp"
+                android:layout_weight=".7"
+                android:background="@color/white"
+                android:hint="ইমেইল"
+                android:imeOptions="actionNext"
+                android:inputType="textEmailAddress"
+                android:paddingLeft="10sp"
+                android:singleLine="true" />
+
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_below="@id/email"
+                android:layout_margin="10dp"
+                android:layout_weight=".7"
+                android:background="@color/white"
+                android:hint="পাসওয়ার্ড (ন্যূনতম ৮ অক্ষর)"
+                android:imeOptions="actionNext"
+                android:inputType="text"
+                android:privateImeOptions="nm"
+                android:paddingLeft="10sp"
+                android:singleLine="true" />
+
+            <EditText
+                android:id="@+id/name"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_below="@id/password"
+                android:layout_margin="10dp"
+                android:layout_weight=".7"
+                android:background="@color/white"
+                android:hint="নাম"
+                android:imeOptions="actionNext"
+                android:inputType="text"
+                android:privateImeOptions="nm"
+                android:paddingLeft="10sp"
+                android:singleLine="true" />
+
+            <EditText
+                android:id="@+id/display_name"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_below="@id/name"
+                android:layout_margin="10dp"
+                android:layout_weight=".8"
+                android:background="@color/white"
+                android:hint="ডিসপ্লে নাম"
+                android:imeOptions="actionDone"
+                android:inputType="text"
+                android:paddingLeft="10sp"
+                android:privateImeOptions="nm"
+                android:singleLine="true" />
+
+            <!-- <net.rimoto.intlphoneinput.IntlPhoneInput
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_alignLeft="@+id/numbervarifytextView1"
+                 android:layout_alignRight="@+id/numbervarifytextView1"
+                 android:background="@color/back_verifycode_edittext1"
+                 android:layout_marginTop="15dp"
+                 app:textSize="14sp"
+                 app:textColor="#000000"
+                 app:flagPaddingEnd="4dp"
+                 app:flagPaddingStart="4dp"
+                 app:flagPaddingTop="4dp"
+                 app:flagPaddingBottom="4dp"
+                 android:layout_marginLeft="10dp"
+                 android:layout_marginRight="10dp"
+                 android:id="@+id/my_phone_input"
+                 android:padding="5dp"
+                 android:layout_centerHorizontal="true"
+                 android:layout_below="@id/numbervarifytextView1"/>-->
+
+            <Button
+                android:id="@+id/register_button"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_below="@id/my_phone_input"
+                android:layout_margin="10dp"
+                android:layout_weight=".8"
+                android:background="@color/colorPrimary"
+                android:text="রেজিস্ট্রেশন করুন"
+                android:textColor="@color/white"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/or"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@id/register_button"
+                android:layout_marginLeft="10dp"
+                android:layout_weight=".5"
+                android:gravity="center"
+                android:text="অথবা" />
+
+            <Button
+                android:id="@+id/login_button"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_margin="10dp"
+                android:paddingLeft="15dp"
+                android:text="ফেসবুক দিয়ে রেজিস্ট্রেশন করুন"
+                android:textColor="@color/white" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:height="1dp"
-                android:background="#A9A9A9"/>
+                android:background="#A9A9A9" />
+
             <TextView
                 android:id="@+id/login"
                 android:layout_width="match_parent"
-                android:text="পুরাতন ব্যবহারকারী লগইন করুন"
-                android:layout_marginTop="20dp"
-                android:textAlignment="center"
                 android:layout_height="50dp"
-                android:layout_alignParentBottom="true"/>
+                android:layout_alignParentBottom="true"
+                android:layout_marginTop="20dp"
+                android:text="পুরাতন ব্যবহারকারী লগইন করুন"
+                android:textAlignment="center" />
 
 
         </LinearLayout>
     </ScrollView>
-
 
 
 </RelativeLayout>
