--- a/app/src/main/res/layout/activity_image_crop.xml
+++ b/app/src/main/res/layout/activity_image_crop.xml
@@ -59,13 +59,16 @@
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
-                android:text="বাতিল করুন" />
+                android:text="@string/registration_cancel_btn_text" />
             <Button
                 android:id="@+id/crop"
-                android:text="সংরক্ষন করুন"
-                android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="50dp" />
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:text="@string/registration_accept_btn_text"
+                android:textColor="#FFFFFF"
+                android:backgroundTint="@color/colorPrimary"
+                />
 
         </LinearLayout>
 
