--- a/app/src/main/res/layout/activity_pop.xml
+++ b/app/src/main/res/layout/activity_pop.xml
@@ -95,6 +95,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_margin="10dp"
         android:weightSum="2">
         <Button
             android:id="@+id/cancel"
@@ -103,7 +104,6 @@
             android:text="@string/registration_cancel_btn_text"
             android:textColor="#626262"
             android:layout_height="50dp"
-            android:layout_margin="10dp"
             android:descendantFocusability="blocksDescendants"/>
         <Button
             android:id="@+id/accept"
@@ -112,8 +112,7 @@
             android:text="@string/registration_accept_btn_text"
             android:textColor="#FFFFFF"
             android:layout_height="50dp"
-            android:layout_margin="10dp"
-            android:background="@color/colorPrimary"
+            android:backgroundTint="@color/colorPrimary"
             android:descendantFocusability="blocksDescendants"/>
     </LinearLayout>
 
