--- a/app/src/main/res/layout/activity_pop_up_choice_selection_third_page.xml
+++ b/app/src/main/res/layout/activity_pop_up_choice_selection_third_page.xml
@@ -56,7 +56,7 @@
             android:id="@+id/cancel"
             android:layout_weight="1"
             android:layout_width="wrap_content"
-            android:text="বাতিল করুন"
+            android:text="@string/registration_cancel_btn_text"
             android:textColor="#626262"
             android:layout_height="50dp"
             android:layout_margin="10dp"
@@ -65,10 +65,11 @@
             android:id="@+id/accept"
             android:layout_weight="1"
             android:layout_width="wrap_content"
-            android:text="গ্রহণ করুন"
-            android:textColor="#626262"
+            android:text="@string/registration_accept_btn_text"
+            android:textColor="#FFFFFF"
             android:layout_height="50dp"
             android:layout_margin="10dp"
+            android:backgroundTint="@color/colorPrimary"
             android:descendantFocusability="blocksDescendants"/>
     </LinearLayout>
 
